# liftit-cotizador-sicetac

./: .dockerignore  .gitignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_ACCESS.md  Dockerfile  Dockerfile.prod  FINAL_SETUP.md  FIX_GOOGLE_OAUTH.md  GOOGLE_AUTH_SETUP.md  LIFTIT_GOOGLE_WORKSPACE_SETUP.md  OAUTH_SETUP.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_FIXES.md  PRODUCTION_READY.md  PROXY_REQUEST.md  README.md  SICETAC_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  config.toml  debug_soap_response.py  docker-compose.prod.yml  docker-compose.yml  load_test_report_20250924_165525.json  micarga_vercel_config.json  package.json  pyproject.toml  quotations.db  requirements.txt  setup_env.sh  sicetac_response.html  test_auth_flow.py  test_debug_sicetac.py  test_deployment.sh  test_direct_sicetac.py  test_google_oauth.html  test_login_page.html  test_micarga_deployment.py  test_oauth_chrome.py  test_sicetac_connection.py  (+17 more)
Liftit Logo Sicetac_files/: 2.html  RotateCookiesPage.html  app.html  call.html  cb=gapi.loaded_0  combined-gmail-v3_1_0-1721941447.css  css2  frame(1).html  frame(2).html  frame(3).html  frame(4).html  frame(5).html  frame.html  m=_b,_tp  m=_b,_tp(2)  m=_b,_tp,byfTOb,lsjVmc,LEikZe,n73qwf,UUJqVe,MpJwZc  m=a  m=b  m=m,m_i,i20jfd,lKrWxc,hkjXJ,gYOl6d,HXLjIb,Ng2pOb,mlxMDe,fYVVAd,dwi4A,CGR0he,DL8jZe,xaQcye,J41knb,sLkgSb,eoq5Ke,oRmHt,E1P0kd,X3h7x,pE92lb,v2eEBc,lLhY8,UCS7w  m=worldmoleview,_b,_tp,byfTOb,lsjVmc,LEikZe,n73qwf,UUJqVe,MpJwZc  rs=AA2YrTtPgSqVZDs5alfSoqico2Ba5syeuw  world.html
api/: config.js  healthz.js  index.js  index.py  quote.js  test.py
app/: main.py  (+1 more)
(+52 files in other folders)
